<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">井蛙工厂测试</string>
    <string name="moto">震动开关</string>
    <string name="test_item_button">按键测试</string>
    <string name="test_item_moto">马达测试</string>
    <string name="test_item_depth_sensor">深度传感器测试</string>
    <string name="test_item_accel_sensor">加速度传感器测试</string>
    <string name="test_item_led">LED灯测试</string>
    <string name="test_item_charge">充电测试</string>
    <string name="test_item_battery">电池测试</string>
    <string name="test_item_suspend">待机测试</string>
    <string name="test_item_heater">加热器测试</string>

    <string-array name="keys">
        <item>震动增强键</item>
        <item>震动模式键</item>
        <item>震动减弱键</item>
        <item>高潮键</item>
    </string-array>
    <string-array name="items">
        <item>按键</item>
        <item>马达</item>
        <item>充电</item>
        <item>LED灯</item>
        <item>电容传感器</item>
        <item>重力传感器</item>
    </string-array>
    <string-array name="depths">
        <item>深度1</item>
        <item>深度2</item>
        <item>深度3</item>
        <item>深度4</item>
    </string-array>

    <string name="pass">通过</string>
    <string name="fail">失败</string>
    <string name="battery_voltage">电池电压：</string>
    <string name="battery_capacity">电池电量：</string>
    <string name="battery_state">电池状态：</string>
    <string name="led_battery_state">电池状态灯开关</string>
    <string name="led_bluetooth_state">蓝牙状态灯开关</string>
    <string name="auto_test">自动测试</string>
    <string name="start">开始</string>

    <string-array name="battery_states">
        <item>正在放电</item>
        <item>电量低</item>
        <item>正在充电</item>
        <item>已充满电</item>
    </string-array>

    <string name="disconnect">断开</string>
    <string name="key">按键</string>
    <string name="read_test_result_failed">读测试结果失败</string>
    <string name="write_test_result_failed">写测试结果失败</string>
    <string name="into_suspend">进入待机</string>
    <string name="device_not_connect">设备未连接</string>
    <string name="device_disconnected">设备已断开连接</string>
    <string name="device_connected">已连接：<xliff:g>%1$s</xliff:g></string>
    <string name="app_name_mac_convert">井蛙MAC计算器</string>
    <string name="start_mac_address">起始地址：</string>
    <string name="end_mac_address">结束地址：</string>
    <string name="device_suspend_propmpt">设备已进入待机，请查看待机电流是否正常</string>
    <string name="address_count">地址个数：</string>
    <string name="start_mac_address_next">下一次起始地址：</string>
    <string-array name="projects">
        <item >请选择项目</item>
        <item >MODEL-06</item>
        <item >MODEL-10</item>
        <item >MODEL-01</item>
        <item >MODEL-03</item>
        <item >MODEL-11</item>
        <item >JWAOO-S1</item>
        <item >JWAOO-T1</item>
    </string-array>
        <string name="copy">复制</string>
        <string name="prompt_copied_to_clipboard">文字已复制到剪切板</string>
        <string name="project_name">项目名称：</string>
        <string name="build_date">编译时间：<xliff:g>%1$s</xliff:g></string>
        <string name="led_state">状态灯开关</string>
        <string name="switch_heater">加热器开关</string>
        <string name="temperature">温度：</string>

</resources>