<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.cavan.jwaootoyfactorytest.LedCheckBox
        android:id="@+id/checkBoxLedBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxLed"
        android:layout_below="@+id/checkBoxLed"
        android:text="@string/led_bluetooth_state" />

    <com.cavan.jwaootoyfactorytest.LedCheckBox
        android:id="@+id/checkBoxLed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/led_state" />

    <com.cavan.jwaootoyfactorytest.LedCheckBox
        android:id="@+id/checkBoxLedBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxLed"
        android:layout_alignLeft="@+id/checkBoxLed"
        android:text="@string/led_battery_state" />

</RelativeLayout>